--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,3 @@
-#root {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
 body {
   margin: 0;
   padding: 0;
